# contact_sensor

./: CMakeLists.txt  arduino_rp2040_connect_udev.sh  package.xml
config/: serial_bridge.yaml
src/: contact_sensor_node.cpp  visualizer_node.cpp
